--- a/fend_mm2/index.html
+++ b/fend_mm2/index.html
@@ -96,13 +96,13 @@
           <li class="flex items-center py-2 rounded-md px-9">
             <!-- Left side: Profile Icon + Name/Role -->
             <div class="flex items-center mr-7">
-              <img src="./images/profile-icon.svg" class="w-10 h-10 mr-3 rounded-full" alt="Profile" />
+              <img src="./images/profile-icon.svg" class="mr-3 rounded-full w-9 h-9" alt="Profile" />
               <div class="flex flex-col">
                 <span class="text-sm font-medium text-gray-900 dark:text-white">
-                  John Doe
+                  Gavano
                 </span>
                 <span class="text-xs text-gray-500 dark:text-gray-400">
-                  Admin
+                  HR Manager
                 </span>
               </div>
             </div>
@@ -249,12 +249,12 @@
           <div class="flex flex-col items-start justify-between gap-3 mb-8 sm:flex-row sm:items-center">
             <h2 class="text-lg font-normal textColor">Job Statistics</h2>
             <div class="flex flex-wrap items-center gap-4">
-              <label class="flex items-center gap-1 text-sm textColor">
-                <input type="checkbox" checked class="accent-gray-400" id="toggle-view" />
+              <label class="flex items-center gap-2 text-sm textColor">
+                <div class="w-3 h-3 rounded-sm legend-square-view"></div>
                 Job View
               </label>
-              <label class="flex items-center gap-1 text-sm textColor">
-                <input type="checkbox" checked class="accent-purple-500" id="toggle-applied" />
+              <label class="flex items-center gap-2 text-sm textColor">
+                <div class="w-3 h-3 rounded-sm legend-square-applied"></div>
                 Job Applied
               </label>
               <select class="px-3 py-2 text-sm iconsBackground blueTextColor rounded-xl">
@@ -311,118 +311,117 @@
 
       <!-- Employee status and composition section - Made responsive -->
       <div class="flex flex-col w-full gap-4 mx-auto mt-6 lg:flex-row md:gap-8 md:mt-8">
+        <style>
+          @media (max-width: 1023px) {
+            .employee-status-container { width: 100% !important; }
+            .employee-composition-container { width: 100% !important; }
+          }
+        </style>
         <!-- Employee status -->
-        <div class="w-full p-4 overflow-x-auto border rounded-md shadow-md backgroundColor md:p-6 borderColor lg:w-2/3">
-          <div class="flex flex-col items-start justify-between gap-3 mb-4 mr-3 sm:flex-row sm:items-center md:mb-6">
-            <h2 class="text-lg font-normal textColor">Employee Status</h2>
-            <button class="flex items-center gap-1 px-2 py-2 text-sm rounded-md filterSortBtn responsiveFilterBtn">
-              Filter & Short
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
-                <path d="M17.6436 4.16663H15.1436" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M11.8102 2.5V5.83333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M11.8102 4.16663H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M5.97689 10H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M9.31018 8.33337V11.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M18.4768 10H9.31018" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M17.6436 15.8334H15.1436" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M11.8102 14.1666V17.5" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M11.8102 15.8334H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg>
-            </button>
-          </div>
+        <div class="w-full overflow-x-auto border shadow-md employee-status-container backgroundColor borderColor" style="width: 70%; border-width: 1.81px; padding: 24px 27px; border-radius: 6px;">
+          <div class="flex flex-col h-full" style="gap: 18px;">
+            <div class="flex items-center justify-between">
+              <h2 class="text-lg font-normal textColor">Employee Status</h2>
+              <button class="flex items-center gap-1 px-2 py-2 text-sm rounded-md filterSortBtn">
+                Filter & Short
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
+                  <path d="M17.6436 4.16663H15.1436" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M11.8102 2.5V5.83333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M11.8102 4.16663H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M5.97689 10H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M9.31018 8.33337V11.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M18.4768 10H9.31018" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M17.6436 15.8334H15.1436" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M11.8102 14.1666V17.5" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M11.8102 15.8334H2.64355" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </button>
+            </div>
 
-          <!-- Table container with min-width to make it scrollable horizontally on small screens -->
-          <div class="pr-12 overflow-x-auto">
-            <table class="w-full" style="min-width: 600px;">
-              <thead>
-                <tr class="border-b borderColor">
-                  <th class="py-3 text-left tableHeading">
-                    Employee Name
-                  </th>
-                  <th class="py-3 text-left tableHeading">
-                    Department
-                  </th>
-                  <th class="py-3 text-left tableHeading">Age</th>
-                  <th class="py-3 text-left tableHeading">
-                    Discipline
-                  </th>
-                  <th class="py-3 text-left tableHeading">Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="border-b borderColor">
-                  <td class="py-4">
-                    <div class="flex items-center gap-3">
-                      <div class="flex items-center justify-center w-8 h-8 overflow-hidden bg-indigo-500 rounded-full">
-                        <img src="./images/profile-icon.svg" alt="Justin" class="object-cover w-full h-full" />
+            <div class="flex-1 overflow-x-auto" style="gap: 21px;">
+              <table class="w-full">
+                <thead>
+                  <tr class="border-b borderColor">
+                    <th class="py-4 font-normal text-left tableHeading" style="width: 30%;">Employee Name</th>
+                    <th class="py-4 font-normal text-left tableHeading" style="width: 20%;">Department</th>
+                    <th class="py-4 font-normal text-left tableHeading" style="width: 15%;">Age</th>
+                    <th class="py-4 font-normal text-left tableHeading" style="width: 20%;">Discipline</th>
+                    <th class="py-4 font-normal text-right tableHeading" style="width: 15%;">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr >
+                    <td class="py-6" >
+                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                        <div class="flex-shrink-0 overflow-hidden rounded-full w-9 h-9">
+                          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face" alt="Justin" class="object-cover w-full h-full" />
+                        </div>
+                        <span class="font-medium textColor">Justin Lipshutz</span>
                       </div>
-                      <span class="textColor">Justin Lipshutz</span>
-                    </div>
-                  </td>
-                  <td class="py-4 textColor">Marketing</td>
-                  <td class="py-4 textColor">22</td>
-                  <td class="py-4">
-                    <span><span style="color: #16C098;">+</span><span class="textColor">100%</span></span>
-                  </td>
-                  <td class="py-4">
-                    <span class="px-3 py-1 text-sm rounded-md statusPermanent">Permanent</span>
-                  </td>
-                </tr>
-
-                <tr class="border-b borderColor">
-                  <td class="py-4">
-                    <div class="flex items-center gap-3">
-                      <div class="flex items-center justify-center w-8 h-8 overflow-hidden bg-blue-500 rounded-full">
-                        <img src="./images/profile-icon.svg" alt="Marcus" class="object-cover w-full h-full" />
+                    </td>
+                    <td class="py-6 textColor" style="padding-top:8px ;">Marketing</td>
+                    <td class="py-6 textColor" style="padding-top:8px ;">22</td>
+                    <td class="py-6 font-medium style="padding-top:8px ;">
+                      <span><span style="color: #16C098;">+</span><span class="textColor">100%</span></span>
+                    </td>
+                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
+                      <span class="px-4 py-2 text-sm rounded-lg statusPermanent">Permanent</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="py-6">
+                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                        <div class="flex-shrink-0 overflow-hidden rounded-full h-9 w10 w-">
+                          <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face" alt="Marcus" class="object-cover w-full h-full" />
+                        </div>
+                        <span class="font-medium textColor">Marcus Culhane</span>
                       </div>
-                      <span class="textColor">Marcus Culhane</span>
-                    </div>
-                  </td>
-                  <td class="py-4 textColor">Finance</td>
-                  <td class="py-4 textColor">24</td>
-                  <td class="py-4">
-                    <span><span style="color: #16C098;">+</span><span class="textColor">95%</span></span>
-                  </td>
-                  <td class="py-4">
-                    <span class="px-3 py-1 text-sm rounded-md statusContract">Contract</span>
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="py-4">
-                    <div class="flex items-center gap-3">
-                      <div class="flex items-center justify-center w-8 h-8 overflow-hidden rounded-full bg-amber-500">
-                        <img src="./images/profile-icon.svg" alt="Leo" class="object-cover w-full h-full" />
+                    </td>
+                    <td class="py-6 textColor" style="padding-top:8px ;">Finance</td>
+                    <td class="py-6 textColor" style="padding-top:8px ;">24</td>
+                    <td class="py-6 font-medium style="padding-top:8px ;">
+                      <span><span style="color: #16C098;">+</span><span class="textColor">95%</span></span>
+                    </td>
+                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
+                      <span class="px-4 py-2 text-sm rounded-lg statusContract">Contract</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="py-6">
+                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                        <div class="flex-shrink-0 overflow-hidden rounded-full w-9 h-9">
+                          <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face" alt="Marcus" class="object-cover w-full h-full" />
+                        </div>
+                        <span class="font-medium textColor">Leo Stantan</span>
                       </div>
-                      <span class="textColor">Leo Stanton</span>
-                    </div>
-                  </td>
-                  <td class="py-4 textColor">R&D</td>
-                  <td class="py-4 textColor">28</td>
-                  <td class="py-4">
-                    <span><span style="color: #16C098;">+</span><span class="textColor">89%</span></span>
-                  </td>
-                  <td class="py-4">
-                    <span class="px-3 py-1 text-sm rounded-md statusPermanent">Permanent</span>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+                    </td>
+                    <td class="py-6 pt-8 textColor" style="padding-top:8px ;">R&D</td>
+                    <td class="py-6 textColor" style="padding-top:8px ;">28</td>
+                    <td class="py-6 font-medium style="padding-top:8px ;">
+                        <span><span style="color: #16C098;">+</span><span class="textColor">89%</span></span>
+                      </td>
+                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
+                      <span class="px-4 py-2 text-sm rounded-lg statusPermanent" style="padding-top:8px ;">Permanent</span>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
 
         <!-- Employee composition - Made responsive -->
         <div
-          class="flex flex-col items-center justify-center w-full p-4 border rounded-md shadow-md backgroundColor md:p-6 borderColor lg:w-1/3">
+          class="flex flex-col items-center justify-center border rounded-md shadow-md employee-composition-container backgroundColor borderColor" style="width: 30%; padding: 24px;">
           <h2 class="self-start mb-4 text-lg font-normal textColor md:mb-6">
             Employee Composition
           </h2>
@@ -547,13 +546,13 @@
           appliedBar.style.minHeight = "1px";
           appliedBar.dataset.tooltip = `Job Applied: ${data.applied}`;
 
-          // Set colors based on dark/light mode (corrected order)
+          // Set colors based on dark/light mode to match Figma design
           if (document.documentElement.classList.contains('dark')) {
-            viewBar.style.backgroundColor = "#2D2D2D"; // Dark mode purple
-            appliedBar.style.backgroundColor = "#6C49EC"; // Dark mode gray
+            viewBar.style.backgroundColor = "#4A4A4A"; // Dark mode gray for Job View
+            appliedBar.style.backgroundColor = "#6C49EC"; // Dark mode purple for Job Applied
           } else {
-            viewBar.style.backgroundColor = "#F2EFFF"; // Light mode purple
-            appliedBar.style.backgroundColor = "#5832E6"; // Light mode gray
+            viewBar.style.backgroundColor = "#E8E8E8"; // Light mode gray for Job View
+            appliedBar.style.backgroundColor = "#5832E6"; // Light mode purple for Job Applied
           }
 
           // Add tooltip event listeners
@@ -595,12 +594,7 @@
             });
           });
 
-          // Toggle visibility based on checkboxes
-          const toggleView = document.getElementById("toggle-view");
-          const toggleApplied = document.getElementById("toggle-applied");
-
-          if (toggleView && !toggleView.checked) viewBar.style.display = "none";
-          if (toggleApplied && !toggleApplied.checked) appliedBar.style.display = "none";
+          // Both bars are always visible in this design
 
           // Stack the bars (corrected order)
           barWrapper.appendChild(viewBar);
@@ -629,12 +623,7 @@
       // Initialize chart
       renderBars();
 
-      // Add event listeners for toggles
-      const toggleView = document.getElementById("toggle-view");
-      const toggleApplied = document.getElementById("toggle-applied");
-
-      if (toggleView) toggleView.addEventListener("change", renderBars);
-      if (toggleApplied) toggleApplied.addEventListener("change", renderBars);
+      // Legend is now visual only with colored squares
 
       // Listen for dark mode changes
       const darkModeButton = document.querySelector('button[onclick="document.documentElement.classList.toggle(\'dark\')"]');
