added margin top

--- a/fend_mm2/index.html
+++ b/fend_mm2/index.html
@@ -305,7 +305,7 @@
           </div>
         </div>
         <div id="tooltip"
-          class="absolute z-50 flex items-center justify-center hidden w-8 h-6 text-xs font-medium text-white rounded shadow-lg pointer-events-none"
+          class="absolute z-50 flex items-center justify-center w-8 h-6 text-xs font-medium text-white rounded shadow-lg pointer-events-none"
           style="transform: translateX(-50%);"></div>
       </div>
 
@@ -361,56 +361,56 @@
                 <tbody>
                   <tr >
                     <td class="py-6" >
-                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                      <div class="flex items-center gap-3" style="padding-top: 20px;">
                         <div class="flex-shrink-0 overflow-hidden rounded-full w-9 h-9">
                           <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face" alt="Justin" class="object-cover w-full h-full" />
                         </div>
                         <span class="font-medium textColor">Justin Lipshutz</span>
                       </div>
                     </td>
-                    <td class="py-6 textColor" style="padding-top:8px ;">Marketing</td>
-                    <td class="py-6 textColor" style="padding-top:8px ;">22</td>
-                    <td class="py-6 font-medium style="padding-top:8px ;">
+                    <td class="py-6 textColor" style="padding-top:20px ;">Marketing</td>
+                    <td class="py-6 textColor" style="padding-top:20px ;">22</td>
+                    <td class="py-6 font-medium" style="padding-top:20px ;">
                       <span><span style="color: #16C098;">+</span><span class="textColor">100%</span></span>
                     </td>
-                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
+                    <td class="py-6 text-right" style="padding-right: 0 !important; padding-top:20px ;">
                       <span class="px-4 py-2 text-sm rounded-lg statusPermanent">Permanent</span>
                     </td>
                   </tr>
                   <tr>
                     <td class="py-6">
-                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                      <div class="flex items-center gap-3" style="padding-top: 20px;">
                         <div class="flex-shrink-0 overflow-hidden rounded-full h-9 w10 w-">
                           <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face" alt="Marcus" class="object-cover w-full h-full" />
                         </div>
                         <span class="font-medium textColor">Marcus Culhane</span>
                       </div>
                     </td>
-                    <td class="py-6 textColor" style="padding-top:8px ;">Finance</td>
-                    <td class="py-6 textColor" style="padding-top:8px ;">24</td>
-                    <td class="py-6 font-medium style="padding-top:8px ;">
+                    <td class="py-6 textColor" style="padding-top:20px ;">Finance</td>
+                    <td class="py-6 textColor" style="padding-top:20px ;">24</td>
+                    <td class="py-6 font-medium" style="padding-top:20px ;">
                       <span><span style="color: #16C098;">+</span><span class="textColor">95%</span></span>
                     </td>
-                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
+                    <td class="py-6 text-right" style="padding-right: 0 !important; padding-top:20px ;">
                       <span class="px-4 py-2 text-sm rounded-lg statusContract">Contract</span>
                     </td>
                   </tr>
                   <tr>
                     <td class="py-6">
-                      <div class="flex items-center gap-3" style="padding-top: 8px;">
+                      <div class="flex items-center gap-3" style="padding-top: 20px;">
                         <div class="flex-shrink-0 overflow-hidden rounded-full w-9 h-9">
                           <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face" alt="Marcus" class="object-cover w-full h-full" />
                         </div>
                         <span class="font-medium textColor">Leo Stantan</span>
                       </div>
                     </td>
-                    <td class="py-6 pt-8 textColor" style="padding-top:8px ;">R&D</td>
-                    <td class="py-6 textColor" style="padding-top:8px ;">28</td>
-                    <td class="py-6 font-medium style="padding-top:8px ;">
+                    <td class="py-6 pt-8 textColor" style="padding-top:20px ;">R&D</td>
+                    <td class="py-6 textColor" style="padding-top:20px ;">28</td>
+                    <td class="py-6 font-medium" style="padding-top: 20px ;">
                         <span><span style="color: #16C098;">+</span><span class="textColor">89%</span></span>
                       </td>
-                    <td class="py-6 text-right" style="padding-right: 0 !important;" style="padding-top:8px ;">
-                      <span class="px-4 py-2 text-sm rounded-lg statusPermanent" style="padding-top:8px ;">Permanent</span>
+                    <td class="py-6 text-right" style="padding-right: 0 !important; padding-top:20px ;">
+                      <span class="px-4 py-2 text-sm rounded-lg statusPermanent">Permanent</span>
                     </td>
                   </tr>
                 </tbody>
