--- a/fend_mm3/index.html
+++ b/fend_mm3/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="font-sans" style="background-color: #FFFFFF">
     <div
-      class="flex flex-row px-5 py-4 md:px-18 items-center"
+      class="flex flex-row items-center px-5 py-4 md:px-18"
       style="background-color: #007272"
     >
       <img src="images/Logo.svg" class="h-8 mr-4" alt="Logo" />
@@ -28,10 +28,10 @@
         <div id="add-task-button">
           <button
             onclick="showTaskInput()"
-            class="flex items-center text-white font-medium py-2 px-4 rounded-md transition"
+            class="flex items-center px-4 py-2 font-medium text-white transition rounded-md"
             style="background-color: #007272"
           >
-            <span class="hidden sm:block mr-2 sm:mr-2 mr-0">Add New Task</span>
+            <span class="hidden mr-0 mr-2 sm:block sm:mr-2">Add New Task</span>
             <img src="images/plus.svg" alt="Add" />
           </button>
         </div>
@@ -40,7 +40,7 @@
         <div id="task-input-section" class="hidden">
           <button
             onclick="hideTaskInput()"
-            class="text-white px-3 py-2 rounded-md"
+            class="px-3 py-2 text-white rounded-md"
           >
             <img src="images/x-close.svg" alt="Close" />
           </button>
@@ -57,16 +57,16 @@
             placeholder="Add a new task....."
             class="w-full px-4 py-2 rounded-md text-[32px]"
           />
-          <p id="error-message" class="text-red-500 text-sm mt-1 hidden">
+          <p id="error-message" class="hidden mt-1 text-sm text-red-500">
             Task cannot be empty
           </p>
         </div>
 
         <!-- Button container positioned at bottom -->
-        <div class="button-container w-full flex justify-center">
+        <div class="flex justify-center w-full button-container">
           <button
             type="submit"
-            class="text-white font-medium py-2 px-6 rounded-md transition duration-300"
+            class="px-6 py-2 font-medium text-white transition duration-300 rounded-md"
             style="background-color: #007272"
           >
             Add Task
@@ -78,7 +78,7 @@
     <div id="to-do-list" class="px-5 pt-8 md:px-18">
       <div>
         <div id="tasks-container">
-          <p id="empty-state" class="text-gray-500 text-center py-4">
+          <p id="empty-state" class="py-4 text-center text-gray-500">
             No tasks yet. Add one above!
           </p>
         </div>
@@ -94,18 +94,18 @@
             placeholder="Edit task..."
             class="w-full px-4 py-2 rounded-md text-[32px]"
           />
-          <p id="edit-error" class="text-red-500 text-sm mt-1 hidden">
+          <p id="edit-error" class="hidden mt-1 text-sm text-red-500">
             Task cannot be empty
           </p>
         </div>
 
 
         <!-- Button container positioned at bottom -->
-        <div class="button-container w-full flex justify-center">
+        <div class="flex justify-center w-full button-container">
           <button
             id="save-edit"
             type="submit"
-            class="text-white font-medium py-2 px-6 rounded-md transition duration-300"
+            class="px-6 py-2 font-medium text-white transition duration-300 rounded-md"
             style="background-color: #007272"
           >
             Save Changes
@@ -115,13 +115,13 @@
     </div>
     <div
       id="toast-container"
-      class="fixed top-4 left-1/2 z-50 transition-all duration-300 opacity-0 -translate-y-4 pointer-events-none"
+      class="fixed z-50 transition-all duration-300 -translate-y-4 opacity-0 pointer-events-none top-4 left-1/2"
     >
       <div
-        class="rounded-lg shadow-lg px-4 py-3 flex items-center"
+        class="flex items-center px-4 py-3 rounded-lg shadow-lg"
         style="background-color: #000000a8"
       >
-        <div id="toast-message" class="text-white font-medium">
+        <div id="toast-message" class="font-medium text-white">
           Task added successfully
         </div>
       </div>
